# sec-filing-analyst

./: .gitignore  README.md  extractor.py  prompts.py  providers.py  pyproject.toml  smoke_test.py
tools/: edgar.py
